Rebuild project